syntax = "proto3";

package game.user;

import "common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service UserService {
	// 회원가입
	rpc Register(RegisterRequest) returns (RegisterResponse);

	// 닉네임 설정
	rpc UpdateNickname(UpdateNicknameRequest) returns (UpdateNicknameResponse);
}


message RegisterRequest {
	string username = 1;
	string password = 2;
}

message RegisterResponse {
	game.Result result = 1;
	UserInfo user_info = 2;
}

message UpdateNicknameRequest {
	string id = 1;
	string new_nickname = 2;
}

message UpdateNicknameResponse {
	game.Result result = 1;
	string new_nickname = 2;
	bool exists = 3;
}

message UserInfo {
	string id = 1;
	string username = 2;
	string nickname = 3;
	google.protobuf.Timestamp created_at = 4;
	google.protobuf.Timestamp last_connected = 5;
}